--- a/public/dashboard/css/material-dashboard.css
+++ b/public/dashboard/css/material-dashboard.css
@@ -5623,23 +5623,23 @@ fieldset:disabled .btn {
   --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
   --bs-pagination-font-size: 1rem;
-  --bs-pagination-color: #e91e63;
+  --bs-pagination-color: #007BFF;
   --bs-pagination-bg: #fff;
   --bs-pagination-border-width: 1px;
-  --bs-pagination-border-color: #dee2e6;
+  --bs-pagination-border-color: #fff;
   --bs-pagination-border-radius: 0.375rem;
-  --bs-pagination-hover-color: #e91e63;
+  --bs-pagination-hover-color: #007BFF;
   --bs-pagination-hover-bg: #f0f2f5;
-  --bs-pagination-hover-border-color: #dee2e6;
-  --bs-pagination-focus-color: #e91e63;
+  --bs-pagination-hover-border-color: white;
+  --bs-pagination-focus-color: #007BFF;
   --bs-pagination-focus-bg: #f0f2f5;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.2rem rgba(233, 30, 99, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.2rem #007BFF;
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #e91e63;
-  --bs-pagination-active-border-color: #e91e63;
-  --bs-pagination-disabled-color: #6c757d;
+  --bs-pagination-active-bg: #007BFF;
+  --bs-pagination-active-border-color: #007BFF;
+  --bs-pagination-disabled-color: white;
   --bs-pagination-disabled-bg: #fff;
-  --bs-pagination-disabled-border-color: #dee2e6;
+  --bs-pagination-disabled-border-color: white;
   display: flex;
   padding-left: 0;
   list-style: none;
